# boroboro

./: .gitattributes  .gitmodules  ProjectHome.md  wielki_pixel_logo.xcf
.github/: main.workflow
MyXLib/Box2D/: Box2D.vcxproj.filters  cmake_install.cmake
MyXLib/MXLib/: MXAnimUtils.cpp  MXAnimation.cpp  MXAnimation.h  MXDraw.cpp  MXFont.h  MXImage.h  MXLib.vcxproj.filters  MXParticles.h  MXScene.cpp  MXScene.h  MXScript.cpp  MXScript.h  MXSound.cpp  MXSound.h  MXSpriter.h  MXWorld.cpp  ReadMe.txt  bass.h  stdafx.cpp  v2d.hpp
MyXLib/MyXLib/: BloodAndGore.cpp  FrameManager.h  Game.cpp  Game.h  GameBackground.cpp  GameMap.h  GameResources.cpp  GameResources.h  HellFire.cpp  Highscore.cpp  Items.cpp  Items.h  MyXLib.cpp  MyXLib.rc  MyXLib.vcxproj  MyXLib.vcxproj.filters  Sounds.cpp  Sounds.h  collidable.cpp  collidable.h
MyXLib/MyXLib/images/: wielki_pixel.xcf
MyXLib/MyXLib/music/: readme.txt
docs/: Boroboro.data  Boroboro.html.mem  Boroboro.js  index.html
modules/: CommonFunctions.cmake
src/: CMakeLists.txt  emconfig.bat  emconfig_debug.bat  main.cpp  minmake.bat
src/game/: GameInitializer.cpp  GameInitializer.h  GameManager.cpp  GameManager.h  TestManager.cpp  TestManager.h
src/game/main/: Collidable.cpp  Collidable.h  Controller.h  Items.cpp  Items.h  Particles.cpp  Particles.h  Pickups.cpp  Pickups.h  Player.cpp  Player.h
src/res/images/: wielki_pixel2.xcf
src/res/music/: readme.txt
src/res/script/game/: GUI.Game.msl  GUI.msl  Game.msl  Menu.msl  Particles.msl  Player.msl  Player2.msl  Player3.msl
src/res/script/test/: Game.msl  Intro.msl  Menu.msl  Player.msl  Player2.msl  cheats.msl  test_scene.msl
src/res/shader/: basic.fragment  instanced.vertex  text.fragment
src/sounds/freesounds/: 134709__anovosel__diahrehha.pk
trunk/: readme.txt
trunk/MyXLib/: MyXLib.opensdf  MyXLib.sln
trunk/MyXLib/Box2D/: Box2D.vcxproj
trunk/MyXLib/MXLib/: MXAnimUtils.cpp  MXAnimUtils.h  MXDraw.cpp  MXDraw.h  MXFont.cpp  MXImage.cpp  MXLib.vcxproj  MXLib.vcxproj.filters  MXLine.cpp  MXLine.h  MXParticles.cpp  MXParticles.h  MXScene.cpp  MXScene.h  MXScript.h  MXSound.cpp  MXSound.h  MXSpriter.cpp  MXSpriter.h  MXTimer.cpp  MXTimer.h  MXUtils.cpp  MXUtils.h  MXWindow.cpp  MXWindow.h  MXWorld.cpp  MXWorld.h  stdafx.h  v2d.hpp
trunk/MyXLib/MyXLib/: BloodAndGore.cpp  BloodAndGore.h  Game.cpp  Game.h  GameBackground.cpp  GameBackground.h  GameResources.cpp  GameResources.h  HellFire.h  Highscore.cpp  Highscore.h  Items.cpp  Items.h  LifeBar.h  MyXLib.cpp  MyXLib.vcxproj  MyXLib.vcxproj.filters  ReadMe.txt  Resource.h  Sounds.cpp  Sounds.h  TitleScreen.cpp  TitleScreen.h  collidable.cpp  collidable.h  (+2 more)
(+1 files in other folders)
